:bug: fix persistant double-scrollbars in IE.

--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -180,7 +180,6 @@ iframe[scrolling='no'] {
   }
   }
 .selection-bar {
-  background: #eaeaea;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -193,7 +192,10 @@ iframe[scrolling='no'] {
       -ms-flex-align: center;
           align-items: center;
   padding: 14px 12vw;
+  background-color: #eaeaea;
+
   -ms-flex-preferred-size: auto;
+
       flex-basis: auto;
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
@@ -450,7 +452,7 @@ iframe[scrolling='no'] {
   -ms-flex-preferred-size: 60%;
       flex-basis: 60%;
   position: relative;
-  overflow: scroll;
+  overflow: auto;
   -webkit-overflow-scrolling: touch
 }
 .source-pane > pre {
